--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a class="active" href="#">Pizzeria</a>
         <div class="topnav-right">
          <a href="#viewblock">View Menu</a>
-         <a href="#addTopings">Add Menu</a>
+         <a href="#addTopings">Suggest Menu</a>
         </div>
     </div>
 
@@ -31,10 +31,9 @@
     <div class="newRow" id="addTopings">
         <div class="block1">
             <input id="add_item" placeholder="Type here to add toppings?"> 
-			<button class= "btn btn-succes" onclick="add_top()">Add</button>
+			<button class= "btn btn-success" onclick="add_top()">Add Suggested Menu</button><br><br>
             <button id="add_toppings" onclick="add_item()">Show Pizza</button>
         </div>
-		
         <div class="block2">
             <div id="display_addedmenu">
             </div>
